syntax = 'proto3';

package bookstore;

// Our Book service definition.
service Book {
    rpc createBook (BookItem) returns (BookItem);
    rpc readBook (BookRequest) returns (BookItem);
    rpc readBooks (Empty) returns (BooksList);
}

// Our BookItem message definition.
message BookItem {
    int32 id = 1;
    string book = 2;
}

// Our BookRequest message definition.
message BookRequest {
    int32 id = 1;
}

// Our BooksList message definition. This will be an array of BookItem.
message BooksList {
    repeated BookItem books = 1;
}

// the method `readBooks` does not accept any parameter so we have to specify that it is empty.
message Empty {}